--- a/index.html
+++ b/index.html
@@ -50,5 +50,52 @@
         </div>
       </div>
     </nav>
+    <header>
+      <div class="container header__container">
+        <article class="header__image">
+          <div>
+            <img src="./assets/header/header.jpg" alt="Header image" />
+          </div>
+        </article>
+        <article class="header__content">
+          <h4>Hi, I'm <span>Eugene Vovk</span>. And I'll</h4>
+          <h1>
+            Get your business<br />
+            onlive the right way
+          </h1>
+          <p>
+            Are you looking for a professional developer to put your business
+            online? You've come to the right place! I've helper hundreds of
+            business owners bring their ideas to life. Hire me today!
+          </p>
+          <div class="header__call-to-action">
+            <a href="#contact" class="button primary">Hire me</a>
+            <a href="#projects" class="button">Portfolio</a>
+          </div>
+        </article>
+        <ul class="header__socials">
+          <li>
+            <a href="https://twitter.com" target="_blank">
+              <i class="fa-brands fa-x-twitter"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com" target="_blank">
+              <i class="fa-brands fa-github-alt"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://linkedin.com" target="_blank">
+              <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://dribbble.com" target="_blank">
+              <i class="fa-brands fa-dribbble"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </header>
   </body>
 </html>
