--- a/index.html
+++ b/index.html
@@ -97,5 +97,53 @@
         </ul>
       </div>
     </header>
+    <section class="about" id="about">
+      <div class="container about__container">
+        <div class="about__image">
+          <img src="./assets/about/about.jpg" alt="About image" />
+        </div>
+        <div class="about__details">
+          <h1>About</h1>
+          <div class="about__cards">
+            <article class="about__card">
+              <i class="fa-solid fa-award"></i>
+              <h4>Experience</h4>
+              <small>8+ years</small>
+            </article>
+            <article class="about__card">
+              <i class="fa-solid fa-swatchbook"></i>
+              <h4>Projects</h4>
+              <small>220+ completed</small>
+            </article>
+            <article class="about__card">
+              <i class="fa-solid fa-users"></i>
+              <h4>Clients</h4>
+              <small>100+ worldwide</small>
+            </article>
+          </div>
+          <p>
+            Building projects my clients love have always been passion. Being in
+            the web development industry for over 3 years and serving more 70
+            happy clients worldwide, I'm always motivated to do more!
+          </p>
+          <p>
+            Hi, my name is Eugene Vovk from Moscow, Russia. I'm a web developer.
+            My top proirity is to get your business online the right way, giving
+            you industry-standard design and all the functionality you need to
+            operate smoothly online. Get in touch today with the details of your
+            project let's get started! Check out my resume below!
+          </p>
+          <a
+            href="./assets/resume.pdf"
+            class="button primary"
+            download
+            target="_blank"
+          >
+            <i class="fa-solid fa-download"></i>
+            Download CV
+          </a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
