--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
         </ul>
       </div>
     </header>
-    <section class="about" id="about">
+    <section class="about section" id="about">
       <div class="container about__container">
         <div class="about__image">
           <img src="./assets/about/about.jpg" alt="About image" />
         </div>
         <div class="about__details">
-          <h1>About</h1>
+          <h1>About me</h1>
           <div class="about__cards">
             <article class="about__card">
               <i class="fa-solid fa-award"></i>
