--- a/index.html
+++ b/index.html
@@ -145,5 +145,58 @@
         </div>
       </div>
     </section>
+    <section class="services section" id="services">
+      <h1>Services</h1>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident,
+        tempore.
+      </p>
+      <div class="container services__container">
+        <ul class="services__left">
+          <li class="services__item">
+            <span><i class="fa-solid fa-desktop"></i></span>
+            <div class="">
+              <h3>Frontend</h3>
+              <p>14 Projects</p>
+            </div>
+          </li>
+          <li class="services__item">
+            <span><i class="fa-solid fa-server"></i></span>
+            <div class="">
+              <h3>Backend</h3>
+              <p>11 Projects</p>
+            </div>
+          </li>
+          <li class="services__item">
+            <span><i class="fa-solid fa-computer"></i></span>
+            <div class="">
+              <h3>Fullstack</h3>
+              <p>28 Projects</p>
+            </div>
+          </li>
+        </ul>
+        <article class="services__right">
+          <h3>Frontend Development</h3>
+          <p>
+            Frontend ipsum dolor sit amet consectetur adipisicing elit. Rem ad
+            iste accusantium nemo nobis quas eaque, fuga facilis odit, itaque
+            neque quod eveniet ratione consectetur dolores at sapiente, repellat
+            vero
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
+            tenetur nostrum corrupti minima harum accusantium provident optio,
+            ullam nam ducimus modi recusandae impedit aut iste quaerat eveniet!
+            Voluptates, qui eaque
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, dicta
+            placeat. Voluptas reprehenderit quae error blanditiis autem corporis
+            provident maxime. Reprehenderit quaerat, maxime harum eum labore
+            placeat esse vitae dolore
+          </p>
+        </article>
+      </div>
+    </section>
   </body>
 </html>
