--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
       </p>
       <div class="container services__container">
         <ul class="services__left">
-          <li class="services__item">
-            <span><i class="fa-solid fa-desktop"></i></span>
+          <li class="services__item active">
+            <span><i class="fa-solid fa-display"></i></span>
             <div class="">
               <h3>Frontend</h3>
               <p>14 Projects</p>
@@ -184,10 +184,13 @@
             vero
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
-            tenetur nostrum corrupti minima harum accusantium provident optio,
-            ullam nam ducimus modi recusandae impedit aut iste quaerat eveniet!
-            Voluptates, qui eaque
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum
+            cupiditate expedita corporis cumque incidunt illo nemo? Ea nisi
+            illo, doloribus ipsum quam libero atque et quos dolorum. Atque ipsum
+            sunt cupiditate dolorum nihil tenetur dolore voluptatibus, maxime
+            magni blanditiis repellendus minus et consequuntur officiis quod
+            nesciunt perferendis ut, alias fuga quas? Eaque perferendis quia ea
+            beatae saepe. Aliquid, voluptatem suscipit.
           </p>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, dicta
