add js for Services

--- a/index.html
+++ b/index.html
@@ -153,21 +153,21 @@
       </p>
       <div class="container services__container">
         <ul class="services__left">
-          <li class="services__item active">
+          <li class="service__item frontend active">
             <span><i class="fa-solid fa-display"></i></span>
             <div class="">
               <h3>Frontend</h3>
               <p>14 Projects</p>
             </div>
           </li>
-          <li class="services__item">
+          <li class="service__item backend">
             <span><i class="fa-solid fa-server"></i></span>
             <div class="">
               <h3>Backend</h3>
               <p>11 Projects</p>
             </div>
           </li>
-          <li class="services__item">
+          <li class="service__item fullstack">
             <span><i class="fa-solid fa-computer"></i></span>
             <div class="">
               <h3>Fullstack</h3>
@@ -176,12 +176,12 @@
           </li>
         </ul>
         <article class="services__right">
-          <h3>Frontend Development</h3>
+          <!-- <h3>Frontend Development</h3>
           <p>
             Frontend ipsum dolor sit amet consectetur adipisicing elit. Rem ad
             iste accusantium nemo nobis quas eaque, fuga facilis odit, itaque
             neque quod eveniet ratione consectetur dolores at sapiente, repellat
-            vero
+            vero.
           </p>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum
@@ -196,10 +196,12 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, dicta
             placeat. Voluptas reprehenderit quae error blanditiis autem corporis
             provident maxime. Reprehenderit quaerat, maxime harum eum labore
-            placeat esse vitae dolore
-          </p>
+            placeat esse vitae dolore.
+          </p> -->
         </article>
       </div>
     </section>
+    <script src="./js/data.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
