--- a/index.html
+++ b/index.html
@@ -201,6 +201,257 @@
         </article>
       </div>
     </section>
+    <section class="projects section" id="projects">
+      <h1>Recent Projects</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum eaque
+        laudantium eos quam non ut fugit eligendi placeat nulla perferendis.
+        Expedita necessitatibus temporibus commodi velit distinctio harum
+        facilis, dolore accusantium.
+      </p>
+      <ul class="projects__categories">
+        <li>All</li>
+        <li>Frontend</li>
+        <li>Backend</li>
+        <li>Fullstack</li>
+      </ul>
+      <div class="container projects__container">
+        <article class="project">
+          <div class="project__image">
+            <img src="./assets/projects/project1.jpg" alt="Project Image One" />
+          </div>
+          <h3>Project One Title (Fullstack)</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+            error explicabo aliquid ipsa voluptatibus dolorum rerum pariatur
+            cupiditate. Alias nobis porro assumenda in eum fuga illo nisi
+            dolorem dicta. Fullstack.
+          </p>
+          <div class="project__call-to-action">
+            <a
+              href="https://egattor.com"
+              class="button small primary"
+              target="_blank"
+            >
+              Demo
+            </a>
+            <a href="https://github.com" class="button small" target="_blank">
+              Github
+            </a>
+          </div>
+        </article>
+        <article class="project">
+          <div class="project__image">
+            <img src="./assets/projects/project2.jpg" alt="Project Image Two" />
+          </div>
+          <h3>Project Two Title (Frontend)</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est
+            doloribus iusto totam vitae assumenda impedit mollitia
+            necessitatibus nisi nihil rerum, nobis blanditiis molestiae
+            similique soluta reprehenderit, quas quod sapiente expedita.
+          </p>
+          <div class="project__call-to-action">
+            <a
+              href="https://egattor.com"
+              class="button small primary"
+              target="_blank"
+            >
+              Demo
+            </a>
+            <a href="https://github.com" class="button small" target="_blank">
+              Github
+            </a>
+          </div>
+        </article>
+        <article class="project">
+          <div class="project__image">
+            <img
+              src="./assets/projects/project3.jpg"
+              alt="Project Image Three"
+            />
+          </div>
+          <h3>Project Three Title (Fullstack)</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, ea!
+            Inventore non voluptatem sed eum veniam maxime minus et tempore
+            voluptatibus veritatis fugiat, ex dolorem fugit expedita soluta
+            perspiciatis fuga!
+          </p>
+          <div class="project__call-to-action">
+            <a
+              href="https://egattor.com"
+              class="button small primary"
+              target="_blank"
+            >
+              Demo
+            </a>
+            <a href="https://github.com" class="button small" target="_blank">
+              Github
+            </a>
+          </div>
+        </article>
+        <article class="project">
+          <div class="project__image">
+            <img
+              src="./assets/projects/project4.jpg"
+              alt="Project Image Four"
+            />
+          </div>
+          <h3>Project Four Title (Backend)</h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Laudantium, placeat velit neque voluptate aperiam aliquid fuga nisi
+            fugit! Beatae, doloremque dolor maiores ipsum nesciunt laboriosam
+            porro? Debitis possimus quis id.
+          </p>
+          <div class="project__call-to-action">
+            <a
+              href="https://egattor.com"
+              class="button small primary"
+              target="_blank"
+            >
+              Demo
+            </a>
+            <a href="https://github.com" class="button small" target="_blank">
+              Github
+            </a>
+          </div>
+        </article>
+        <article class="project">
+          <div class="project__image">
+            <img
+              src="./assets/projects/project5.jpg"
+              alt="Project Image Five"
+            />
+          </div>
+          <h3>Project Five Title (Fullstack)</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
+            deleniti ad, nam debitis tempora impedit optio perspiciatis maxime
+            quos molestias incidunt itaque eius aut dolorum tempore numquam
+            animi nemo quasi?
+          </p>
+          <div class="project__call-to-action">
+            <a
+              href="https://egattor.com"
+              class="button small primary"
+              target="_blank"
+            >
+              Demo
+            </a>
+            <a href="https://github.com" class="button small" target="_blank">
+              Github
+            </a>
+          </div>
+        </article>
+        <article class="project">
+          <div class="project__image">
+            <img src="./assets/projects/project6.jpg" alt="Project Image Six" />
+          </div>
+          <h3>Project Six Title (Frontend)</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis
+            itaque quibusdam veritatis iusto fugit et dignissimos ducimus
+            quaerat corrupti consequatur error, saepe natus, quod neque
+            necessitatibus, omnis temporibus. A, quasi.
+          </p>
+          <div class="project__call-to-action">
+            <a
+              href="https://egattor.com"
+              class="button small primary"
+              target="_blank"
+            >
+              Demo
+            </a>
+            <a href="https://github.com" class="button small" target="_blank">
+              Github
+            </a>
+          </div>
+        </article>
+        <article class="project">
+          <div class="project__image">
+            <img
+              src="./assets/projects/project7.jpg"
+              alt="Project Image Seven"
+            />
+          </div>
+          <h3>Project Seven Title (Backend)</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Perferendis perspiciatis soluta adipisci placeat, sunt iure minus
+            odio ex. Voluptatum ut repellat deleniti quidem neque delectus
+            voluptatem sapiente alias sit ipsa!
+          </p>
+          <div class="project__call-to-action">
+            <a
+              href="https://egattor.com"
+              class="button small primary"
+              target="_blank"
+            >
+              Demo
+            </a>
+            <a href="https://github.com" class="button small" target="_blank">
+              Github
+            </a>
+          </div>
+        </article>
+        <article class="project">
+          <div class="project__image">
+            <img
+              src="./assets/projects/project8.jpg"
+              alt="Project Image Eight"
+            />
+          </div>
+          <h3>Project Eight Title (Frontend)</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quod,
+            soluta provident adipisci amet, assumenda voluptas odit animi nobis
+            mollitia cum eaque culpa suscipit et earum maiores eveniet facere
+            similique.
+          </p>
+          <div class="project__call-to-action">
+            <a
+              href="https://egattor.com"
+              class="button small primary"
+              target="_blank"
+            >
+              Demo
+            </a>
+            <a href="https://github.com" class="button small" target="_blank">
+              Github
+            </a>
+          </div>
+        </article>
+        <article class="project">
+          <div class="project__image">
+            <img
+              src="./assets/projects/project9.jpg"
+              alt="Project Image Nine"
+            />
+          </div>
+          <h3>Project Nine Title (Fullstack)</h3>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Doloremque, maiores ex voluptatem asperiores tenetur magnam
+            necessitatibus enim ipsam excepturi ut natus assumenda
+            exercitationem nulla quidem doloribus culpa. Magni, itaque cum.
+          </p>
+          <div class="project__call-to-action">
+            <a
+              href="https://egattor.com"
+              class="button small primary"
+              target="_blank"
+            >
+              Demo
+            </a>
+            <a href="https://github.com" class="button small" target="_blank">
+              Github
+            </a>
+          </div>
+        </article>
+      </div>
+    </section>
     <script src="./js/data.js"></script>
     <script src="./js/index.js"></script>
   </body>
