--- a/index.html
+++ b/index.html
@@ -210,13 +210,13 @@
         facilis, dolore accusantium.
       </p>
       <ul class="projects__categories">
-        <li>All</li>
+        <li class="active">All</li>
         <li>Frontend</li>
         <li>Backend</li>
         <li>Fullstack</li>
       </ul>
       <div class="container projects__container">
-        <article class="project">
+        <article class="project fullstack">
           <div class="project__image">
             <img src="./assets/projects/project1.jpg" alt="Project Image One" />
           </div>
@@ -240,7 +240,7 @@
             </a>
           </div>
         </article>
-        <article class="project">
+        <article class="project frontend">
           <div class="project__image">
             <img src="./assets/projects/project2.jpg" alt="Project Image Two" />
           </div>
@@ -264,14 +264,14 @@
             </a>
           </div>
         </article>
-        <article class="project">
+        <article class="project backend">
           <div class="project__image">
             <img
               src="./assets/projects/project3.jpg"
               alt="Project Image Three"
             />
           </div>
-          <h3>Project Three Title (Fullstack)</h3>
+          <h3>Project Three Title (Backend)</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, ea!
             Inventore non voluptatem sed eum veniam maxime minus et tempore
@@ -291,7 +291,7 @@
             </a>
           </div>
         </article>
-        <article class="project">
+        <article class="project backend">
           <div class="project__image">
             <img
               src="./assets/projects/project4.jpg"
@@ -318,7 +318,7 @@
             </a>
           </div>
         </article>
-        <article class="project">
+        <article class="project fullstack">
           <div class="project__image">
             <img
               src="./assets/projects/project5.jpg"
@@ -345,7 +345,7 @@
             </a>
           </div>
         </article>
-        <article class="project">
+        <article class="project frontend">
           <div class="project__image">
             <img src="./assets/projects/project6.jpg" alt="Project Image Six" />
           </div>
@@ -369,7 +369,7 @@
             </a>
           </div>
         </article>
-        <article class="project">
+        <article class="project backend">
           <div class="project__image">
             <img
               src="./assets/projects/project7.jpg"
@@ -396,7 +396,7 @@
             </a>
           </div>
         </article>
-        <article class="project">
+        <article class="project frontend">
           <div class="project__image">
             <img
               src="./assets/projects/project8.jpg"
@@ -423,7 +423,7 @@
             </a>
           </div>
         </article>
-        <article class="project">
+        <article class="project fullstack">
           <div class="project__image">
             <img
               src="./assets/projects/project9.jpg"
