--- a/index.html
+++ b/index.html
@@ -452,6 +452,115 @@
         </article>
       </div>
     </section>
+    <section class="swiper section">
+      <h1>What my clients say</h1>
+      <p>This is what my clients say about me and my work.</p>
+      <div class="swiper-wrapper">
+        <figure class="swiper-slide">
+          <figcaption>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo qui
+            obcaecati voluptates debitis neque, praesentium facilis cum dolores
+            pariatur eveniet aperiam hic!
+          </figcaption>
+          <div class="swiper__client-avatar">
+            <img src="./assets/avatars/avatar1.jpg" alt="Client One" />
+          </div>
+          <div class="swiper__client-details">
+            <h5>Nana Ama McBrown</h5>
+            <small>Actress</small>
+          </div>
+        </figure>
+        <figure class="swiper-slide">
+          <figcaption>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+            molestiae adipisci non deserunt officiis facere optio nesciunt
+            aliquam necessitatibus maiores, eum id eaque quia in, vitae nulla
+            amet, sint voluptatum.
+          </figcaption>
+          <div class="swiper__client-avatar">
+            <img src="./assets/avatars/avatar2.jpg" alt="Client Two" />
+          </div>
+          <div class="swiper__client-details">
+            <h5>Mickle Neal</h5>
+            <small>Fashion designe</small>
+          </div>
+        </figure>
+        <figure class="swiper-slide">
+          <figcaption>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus
+            accusantium itaque aut harum architecto quaerat dicta a?
+          </figcaption>
+          <div class="swiper__client-avatar">
+            <img src="./assets/avatars/avatar3.jpg" alt="Client Three" />
+          </div>
+          <div class="swiper__client-details">
+            <h5>Luis Cantu</h5>
+            <small>Painter</small>
+          </div>
+        </figure>
+        <figure class="swiper-slide">
+          <figcaption>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque
+            iste, placeat minima dolorem quasi animi!
+          </figcaption>
+          <div class="swiper__client-avatar">
+            <img src="./assets/avatars/avatar4.jpg" alt="Client Four" />
+          </div>
+          <div class="swiper__client-details">
+            <h5>Dax Hanna</h5>
+            <small>Doctor</small>
+          </div>
+        </figure>
+        <figure class="swiper-slide">
+          <figcaption>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+            voluptas necessitatibus earum dolorem quam cum deleniti, totam minus
+            ea assumenda sint quo magni officia eos sapiente quibusdam
+            asperiores hic! Perferendis corporis amet nemo provident quibusdam.
+          </figcaption>
+          <div class="swiper__client-avatar">
+            <img src="./assets/avatars/avatar5.jpg" alt="Client Five" />
+          </div>
+          <div class="swiper__client-details">
+            <h5>Skye Malone</h5>
+            <small>Biologist</small>
+          </div>
+        </figure>
+        <figure class="swiper-slide">
+          <figcaption>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
+            accusamus voluptate eos labore modi vero aut, non eaque esse veniam
+            sunt ad tenetur asperiores.
+          </figcaption>
+          <div class="swiper__client-avatar">
+            <img src="./assets/avatars/avatar6.jpg" alt="Client Six" />
+          </div>
+          <div class="swiper__client-details">
+            <h5>Alexa Hester</h5>
+            <small>Student</small>
+          </div>
+        </figure>
+        <figure class="swiper-slide">
+          <figcaption>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta totam
+            doloribus iusto error iure est repudiandae illum amet saepe
+            assumenda natus possimus sed in nobis, adipisci soluta expedita fuga
+            odit!
+          </figcaption>
+          <div class="swiper__client-avatar">
+            <img src="./assets/avatars/avatar7.jpg" alt="Client Seven" />
+          </div>
+          <div class="swiper__client-details">
+            <h5>Nana Ama McBrown</h5>
+            <small>Singer</small>
+          </div>
+        </figure>
+      </div>
+      <div class="swiper-pagination"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-scrollbar"></div>
+    </section>
     <script src="./mix/dist/mixitup.min.js"></script>
     <script src="./js/data.js"></script>
     <script src="./js/index.js"></script>
