add testimonials.css + add swiper in index.js

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@600;700;800;900&family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Portfolio</title>
   </head>
@@ -462,12 +466,14 @@
             obcaecati voluptates debitis neque, praesentium facilis cum dolores
             pariatur eveniet aperiam hic!
           </figcaption>
-          <div class="swiper__client-avatar">
-            <img src="./assets/avatars/avatar1.jpg" alt="Client One" />
-          </div>
-          <div class="swiper__client-details">
-            <h5>Nana Ama McBrown</h5>
-            <small>Actress</small>
+          <div class="swiper__client">
+            <div class="swiper__client-avatar">
+              <img src="./assets/avatars/avatar1.jpg" alt="Client One" />
+            </div>
+            <div class="swiper__client-details">
+              <h5>Nana Ama McBrown</h5>
+              <small>Actress</small>
+            </div>
           </div>
         </figure>
         <figure class="swiper-slide">
@@ -477,12 +483,14 @@
             aliquam necessitatibus maiores, eum id eaque quia in, vitae nulla
             amet, sint voluptatum.
           </figcaption>
-          <div class="swiper__client-avatar">
-            <img src="./assets/avatars/avatar2.jpg" alt="Client Two" />
-          </div>
-          <div class="swiper__client-details">
-            <h5>Mickle Neal</h5>
-            <small>Fashion designe</small>
+          <div class="swiper__client">
+            <div class="swiper__client-avatar">
+              <img src="./assets/avatars/avatar2.jpg" alt="Client Two" />
+            </div>
+            <div class="swiper__client-details">
+              <h5>Mickle Neal</h5>
+              <small>Fashion designe</small>
+            </div>
           </div>
         </figure>
         <figure class="swiper-slide">
@@ -490,12 +498,14 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus
             accusantium itaque aut harum architecto quaerat dicta a?
           </figcaption>
-          <div class="swiper__client-avatar">
-            <img src="./assets/avatars/avatar3.jpg" alt="Client Three" />
-          </div>
-          <div class="swiper__client-details">
-            <h5>Luis Cantu</h5>
-            <small>Painter</small>
+          <div class="swiper__client">
+            <div class="swiper__client-avatar">
+              <img src="./assets/avatars/avatar3.jpg" alt="Client Three" />
+            </div>
+            <div class="swiper__client-details">
+              <h5>Luis Cantu</h5>
+              <small>Painter</small>
+            </div>
           </div>
         </figure>
         <figure class="swiper-slide">
@@ -503,12 +513,14 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque
             iste, placeat minima dolorem quasi animi!
           </figcaption>
-          <div class="swiper__client-avatar">
-            <img src="./assets/avatars/avatar4.jpg" alt="Client Four" />
-          </div>
-          <div class="swiper__client-details">
-            <h5>Dax Hanna</h5>
-            <small>Doctor</small>
+          <div class="swiper__client">
+            <div class="swiper__client-avatar">
+              <img src="./assets/avatars/avatar4.jpg" alt="Client Four" />
+            </div>
+            <div class="swiper__client-details">
+              <h5>Dax Hanna</h5>
+              <small>Doctor</small>
+            </div>
           </div>
         </figure>
         <figure class="swiper-slide">
@@ -518,12 +530,14 @@
             ea assumenda sint quo magni officia eos sapiente quibusdam
             asperiores hic! Perferendis corporis amet nemo provident quibusdam.
           </figcaption>
-          <div class="swiper__client-avatar">
-            <img src="./assets/avatars/avatar5.jpg" alt="Client Five" />
-          </div>
-          <div class="swiper__client-details">
-            <h5>Skye Malone</h5>
-            <small>Biologist</small>
+          <div class="swiper__client">
+            <div class="swiper__client-avatar">
+              <img src="./assets/avatars/avatar5.jpg" alt="Client Five" />
+            </div>
+            <div class="swiper__client-details">
+              <h5>Skye Malone</h5>
+              <small>Biologist</small>
+            </div>
           </div>
         </figure>
         <figure class="swiper-slide">
@@ -532,12 +546,14 @@
             accusamus voluptate eos labore modi vero aut, non eaque esse veniam
             sunt ad tenetur asperiores.
           </figcaption>
-          <div class="swiper__client-avatar">
-            <img src="./assets/avatars/avatar6.jpg" alt="Client Six" />
-          </div>
-          <div class="swiper__client-details">
-            <h5>Alexa Hester</h5>
-            <small>Student</small>
+          <div class="swiper__client">
+            <div class="swiper__client-avatar">
+              <img src="./assets/avatars/avatar6.jpg" alt="Client Six" />
+            </div>
+            <div class="swiper__client-details">
+              <h5>Alexa Hester</h5>
+              <small>Student</small>
+            </div>
           </div>
         </figure>
         <figure class="swiper-slide">
@@ -547,21 +563,22 @@
             assumenda natus possimus sed in nobis, adipisci soluta expedita fuga
             odit!
           </figcaption>
-          <div class="swiper__client-avatar">
-            <img src="./assets/avatars/avatar7.jpg" alt="Client Seven" />
-          </div>
-          <div class="swiper__client-details">
-            <h5>Nana Ama McBrown</h5>
-            <small>Singer</small>
+          <div class="swiper__client">
+            <div class="swiper__client-avatar">
+              <img src="./assets/avatars/avatar7.jpg" alt="Client Seven" />
+            </div>
+            <div class="swiper__client-details">
+              <h5>Riley Ross</h5>
+              <small>Singer</small>
+            </div>
           </div>
         </figure>
       </div>
       <div class="swiper-pagination"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-scrollbar"></div>
+
     </section>
     <script src="./mix/dist/mixitup.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/data.js"></script>
     <script src="./js/index.js"></script>
   </body>
