--- a/index.html
+++ b/index.html
@@ -575,7 +575,54 @@
         </figure>
       </div>
       <div class="swiper-pagination"></div>
-
+    </section>
+    <section class="contact section" id="contact">
+      <div class="container contact__container">
+        <ul>
+          <li>
+            <a
+              href="mailto:evgeniyvovk2009@yandex.ru"
+              class="contact__list-item"
+              target="_blank"
+            >
+              <i class="fa-regular fa-envelope"></i>
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://www.facebook.com/t/1234567891234567"
+              class="contact__list-item"
+              target="_blank"
+            >
+              <i class="fa-brands fa-facebook-messenger"></i>
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://wa.me/+79854483814"
+              class="contact__list-item"
+              target="_blank"
+            >
+              <i class="fa-brands fa-whatsapp"></i>
+            </a>
+          </li>
+          <li>
+            <a
+              href="tel:+79854483814"
+              class="contact__list-item"
+              target="_blank"
+            >
+              <i class="fa-solid fa-phone"></i>
+            </a>
+          </li>
+        </ul>
+        <form action="">
+          <input type="text" placeholder="Full Name" />
+          <input type="email" placeholder="Email Address" />
+          <textarea rows="7" placeholder="Message"></textarea>
+          <button type="submit" class="button">Send</button>
+        </form>
+      </div>
     </section>
     <script src="./mix/dist/mixitup.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
