--- a/index.html
+++ b/index.html
@@ -628,6 +628,42 @@
         </form>
       </div>
     </section>
+    <footer>
+      <div class="container footer__container">
+        <ul class="footer__menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+        <ul class="footer__socials">
+          <li>
+            <a href="https://twitter.com" target="_blank">
+              <i class="fa-brands fa-x-twitter"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com" target="_blank">
+              <i class="fa-brands fa-github-alt"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://linkedin.com" target="_blank">
+              <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://dribbble.com" target="_blank">
+              <i class="fa-brands fa-dribbble"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__copyright">
+        <small>2023 EGATOR Tutorials &copy; All Right Reserved.</small>
+      </div>
+    </footer>
     <script src="./mix/dist/mixitup.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/data.js"></script>
